--- a/templates/cooperatives.html
+++ b/templates/cooperatives.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -64,3 +66,4 @@
 
 </body>
 </html>
+{% endblock %}
