--- a/templates/users.html
+++ b/templates/users.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -69,3 +71,4 @@
 
 </body>
 </html>
+{% endblock %}
