--- a/templates/recharges.html
+++ b/templates/recharges.html
@@ -57,10 +57,10 @@
       {% for recarga in recargas %}
       <tr>
         <td>{{ recarga[0] }}</td>
-        <td>{{ recarga[1] }}</td>  <!-- Nombre del usuario -->
+        <td>{{ recarga[1] }}</td>  
         <td>{{ recarga[2] }}</td>
-        <td>{{ recarga[3] }}</td>  <!-- Método de pago -->
-        <td>{{ recarga[4] }}</td>  <!-- Fecha y hora -->
+        <td>{{ recarga[3] }}</td>
+        <td>{{ recarga[4] }}</td>
         <td>
           <a href="{{ url_for('edit_recharge', id=recarga[0]) }}" class="btn btn-sm btn-warning">Editar</a>
           <form action="{{ url_for('delete_recharge', id=recarga[0]) }}" method="POST" style="display:inline;">
