--- a/templates/users.html
+++ b/templates/users.html
@@ -25,6 +25,9 @@
       <div class="col">
         <input type="date" name="fecha_nacimiento" placeholder="Fecha de nacimiento" class="form-control" />
       </div>
+      <div class="col">
+        <input type="password" name="contraseña" placeholder="Contraseña" class="form-control" />
+      </div>
       <div class="col-auto">
         <button class="btn btn-primary" type="submit">Agregar usuario</button>
       </div>
@@ -47,6 +50,7 @@
         <th>Email</th>
         <th>Teléfono</th>
         <th>Fecha Nacimiento</th>
+        <th>Contraseña</th>
         <th>Acciones</th>
       </tr>
     </thead>
@@ -58,6 +62,7 @@
         <td>{{ user[2] }}</td>
         <td>{{ user[3] }}</td>
         <td>{{ user[4] }}</td>
+        <td>******</td>  {# Ocultamos la contraseña #}
         <td>
           <a href="{{ url_for('edit_user', id=user[0]) }}" class="btn btn-sm btn-warning">Editar</a>
           <form action="{{ url_for('delete_user', id=user[0]) }}" method="POST" style="display:inline;">
