--- a/templates/conductores.html
+++ b/templates/conductores.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -100,3 +102,4 @@
 
 </body>
 </html>
+{% endblock %}
