--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
         <a href="/routes"><button>🛣 Gestionar Rutas</button></a>
         <a href="/recharges"><button>💳 Recargar Saldo</button></a>
         <a href="/conductores"><button>🚍 Gestionar Conductores</button></a>
+        <a href="/informe"><button>📄 Generar Informes</button></a>
     </div>
 </div>
 
