--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
         <a href="/cooperatives">Cooperativas</a> |
         <a href="/routes">Rutas</a> |
         <a href="/recharges">Recargas</a> |
-        <a href="/conductores">Conductores</a>
+        <a href="/conductores">Conductores</a> |
+        <a href="/conductores">Informes</a>
     </nav>
     <hr>
     {% with messages = get_flashed_messages() %}
