--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <a href="/routes">Rutas</a> |
         <a href="/recharges">Recargas</a> |
         <a href="/conductores">Conductores</a> |
-        <a href="/informes">Informes</a>
+        <a href="/informe">Informes</a>
 
     </nav>
     <hr>
